--- a/Ejercicio1_Empleados/Ejercisio1_Empleado/pom.xml
+++ b/Ejercicio1_Empleados/Ejercisio1_Empleado/pom.xml
@@ -44,4 +44,17 @@
         </dependency>
 
     </dependencies>
+     <build>
+        <plugins>
+            <!-- Plugin para ejecutar JavaFX -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>applications.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
