--- a/Ejercicio3_Parking/Ejercicio3_Parking/pom.xml
+++ b/Ejercicio3_Parking/Ejercicio3_Parking/pom.xml
@@ -43,7 +43,19 @@
         <version>26-ea+3</version>
     </dependency>
     </dependencies>
-
+ <build>
+        <plugins>
+            <!-- Plugin para ejecutar JavaFX -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>applications.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
